--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
   "name": "add-new",
   "version": "1.0.0",
-  "description": "smarter mkdir/touch",
-  "main": "ad",
-  "scripts": {
-    "test": "test"
-  },
+  "description": "smarter mkdir/touch cli for *nix env",
   "bin": {
     "ad": "bin/ad"
   },
@@ -19,7 +15,7 @@
   },
   "author": "lxgreen",
   "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^14.14.24"
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
