--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "engines": {
     "node": ">=10"
   },
-  "author": "lxgreen",
+  "author": {
+    "name": "lxgreen",
+
   "license": "MIT",
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lxgreen/ad.git"
+  },
+  "keywords": ["mkdir", "touch"]
 }
