--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "author": {
     "name": "lxgreen",
-
+    "email": "alxgreen@gmail.com"
+  }
   "license": "MIT",
   "repository": {
     "type": "git",
